# flatssz

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
csharp/ssz/: SszFlatbuffers.cs
go/ssz/: errors.go  go.mod  hash_walker.go  hasher.go  pool.go  zero_hashes.go
include/flatbuffers/: idl.h
java/ssz/: Hasher.java  SszError.java
nim/ssz/: ssz_runtime.nim
rust/ssz_flatbuffers/: Cargo.toml
rust/ssz_flatbuffers/src/: lib.rs
src/: flatc_main.cpp  idl_gen_ssz_csharp.cpp  idl_gen_ssz_csharp.h  idl_gen_ssz_go.cpp  idl_gen_ssz_go.h  idl_gen_ssz_java.cpp  idl_gen_ssz_java.h  idl_gen_ssz_nim.cpp  idl_gen_ssz_nim.h  idl_gen_ssz_rust.cpp  idl_gen_ssz_rust.h  idl_gen_ssz_ts.cpp  idl_gen_ssz_ts.h  idl_gen_ssz_zig.cpp  idl_gen_ssz_zig.h  idl_parser.cpp
tests/ssz/: basic_types.fbs  beacon_types.fbs  bitfields.fbs  container_dynamic.fbs  container_fixed.fbs  progressive_container.fbs  progressive_list.fbs  vectors_lists.fbs
tests/ssz/bench_csharp/: Bench.cs  SszFlatbuffers.cs  bench.csproj  block-mainnet-meta.json  block-mainnet.ssz  deneb_ssz.cs  run.sh
tests/ssz/bench_java/: run.sh
tests/ssz/bench_nim/: bench  bench.nim  block-mainnet-meta.json  block-mainnet.ssz  deneb_ssz.nim  run.sh  ssz_runtime.nim
tests/ssz/bench_ts/: bench.ts  deneb_ssz.ts  run.sh  ssz_runtime.ts
tests/ssz/bench_zig/: bench  (+7 more)
tests/ssz/progressive_bench_rust/: Cargo.toml
tests/ssz/progressive_bench_rust/benches/: progressive_bench.rs
tests/ssz/progressive_bench_rust/src/: container.rs  list.rs
ts/ssz/: package.json  ssz_runtime.ts  tsconfig.json
zig/ssz/: ssz_runtime.zig
(+44 files in other folders)
